# py-perf-event

./: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  test_perf_event.py
.github/workflows/: CI.yml
pysrc/py_perf_event/: __init__.py
src/: lib.rs
