[package]
name = "py-perf-event"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_perf_event"
crate-type = ["cdylib"]

[dependencies]
perf-event2 = "0.7.2"
pyo3 = {version = "0.20", features = ["abi3", "abi3-py38"]}

